tests/negative/traits/assoc_fn_trait_addr.orng
// assoc_fn_trait_addr.orng:17:18: error: expected a value of type `&Int`, got a value of type `Int`
//     My_Sub::sub(x, y)
//                 ^
// 

trait My_Sub {
    fn sub(&self, other: Int) -> Int
}

impl My_Sub for Int {
    fn sub(&self, other: Int) -> Int { self^ - other }
}

fn main() -> Int {
    let x: Int = 500
    let y: Int = 44
    My_Sub::sub(x, y)
}
